--- a/py_server/templates/index.html
+++ b/py_server/templates/index.html
@@ -38,7 +38,8 @@
       console.log("{{context.log_file}}");
       console.log("{{context.port}}");
       console.log("{{context.host}}");
-      var ws = new WebSocket("ws://{{context.host}}:{{context.port}}/ws/log?video_id=value1");
+      // maybe option for wss
+      var ws = new WebSocket("wss://{{context.host}}:{{context.port}}/ws/log?video_id=value1");
 
       ws.onmessage = function (event) {
         var logs = document.getElementById("logs");
