--- a/py_server/templates/index.html
+++ b/py_server/templates/index.html
@@ -39,7 +39,7 @@
       console.log("{{context.port}}");
       console.log("{{context.host}}");
       var rtt;
-      {% if context.host == "0.0.0.0" %}
+      {% if context.host == "fdrtt-stream-production.up.railway.app" %}
       rtt = "wss"
       {% else %}
       rtt = "ws"
