--- a/py_server/templates/index.html
+++ b/py_server/templates/index.html
@@ -49,7 +49,7 @@
       {% endif %}
       console.log(rtt);
       // maybe option for wss
-      var ws = new WebSocket(rtt + "://{{context.host}}:{{context.port}}/ws/log?video_id=value1");
+      var ws = new WebSocket(`${rtt}://${host}:{{context.port}}/ws/log?video_id=value1`);
 
       ws.onmessage = function (event) {
         var logs = document.getElementById("logs");
