fix: revert to wss

--- a/py_server/templates/index.html
+++ b/py_server/templates/index.html
@@ -41,7 +41,7 @@
       var host;
       var rtt;
       {% if context.domain == "fdrtt-stream-production.up.railway.app" %}
-      rtt = "ws"
+      rtt = "wss"
       host = "fdrtt-stream-production.up.railway.app"
       {% else %}
       rtt = "ws"
