--- a/website/src/components/widgets/BlogListItem.astro
+++ b/website/src/components/widgets/BlogListItem.astro
@@ -29,7 +29,7 @@ const image = await findImage(post.image);
       <h2 class="text-xl sm:text-2xl font-bold leading-snug mb-2">
         <a
           class="hover:text-blue-600 underline underline-offset-4 decoration-1 decoration-dotted transition ease-in duration-200"
-          href={`/blog/${post.slug}`}
+          href={`/fdrrt-stream/blog/${post.slug}`}
         >
           {post.title}
         </a>
