--- a/website/src/components/widgets/Header.astro
+++ b/website/src/components/widgets/Header.astro
@@ -57,7 +57,7 @@ const {} = Astro.props;
         <li>
           <a
             class="font-medium hover:text-gray-900 dark:hover:text-white px-4 py-3 flex items-center transition duration-150 ease-in-out"
-            href="/blog"
+            href="blog"
             >Blog
           </a>
         </li>
