--- a/website/src/pages/tags/index.astro
+++ b/website/src/pages/tags/index.astro
@@ -17,7 +17,7 @@ const description = "Tags available for video posts";
   <main>
     {categories.map((category) => {
         return (
-            <a href={`/fdrrt-stream/blog/${category}`}>{category}</a>
+            <a href={`/fdrtt-stream/blog/${category}`}>{category}</a>
         )
     })}
   </main>
