feat: upgrading fdrtt

--- a/website/src/components/core/MetaTags.astro
+++ b/website/src/components/core/MetaTags.astro
@@ -8,7 +8,7 @@ const { src: defaultImage } = await getImage({
 });
 
 const {
-  title = "AstroWind",
+  title = "Fdrtt Transcriptions",
   description = "",
   image = defaultImage,
   canonical,
