fix: attempt to fix issues

--- a/website/src/pages/blog/[...page].astro
+++ b/website/src/pages/blog/[...page].astro
@@ -1,8 +1,8 @@
 ---
-import Layout from "~/layouts/PageLayout.astro";
-import { SITE } from "~/config.mjs";
-import { getPosts } from "~/utils/getPosts";
-import BlogList from "~/components/widgets/BlogList.astro";
+import Layout from "../../layouts/PageLayout.astro";
+import { SITE } from "../../config.mjs";
+import { getPosts } from "../../utils/getPosts";
+import BlogList from "../../components/widgets/BlogList.astro";
 
 export async function getStaticPaths({ paginate }) {
   const posts = await getPosts();
