--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -1,18 +1,18 @@
 ---
-import Layout from "~/layouts/PageLayout.astro";
+import Layout from "../layouts/PageLayout.astro";
 
-import { SITE } from "~/config.mjs";
+import { SITE } from "../config.mjs";
 
-import Hero from "~/components/widgets/Hero.astro";
-import BasicCTA from "~/components/widgets/BasicCTA.astro";
-import BasicFeatures from "~/components/widgets/BasicFeatures.astro";
-import StepsFeatures from "~/components/widgets/StepsFeatures.astro";
-import BasicFAQs from "~/components/widgets/BasicFAQs.astro";
-import TwoColsFeatures from "~/components/widgets/TwoColsFeatures.astro";
-import StepsLeft from "~/components/widgets/StepsLeft.astro";
-import HighlightedPosts from "~/components/widgets/HighlightedPosts.astro";
-import Stats from "~/components/widgets/Stats.astro";
-import SearchUI from "~/components/widgets/SearchUI.astro";
+import Hero from "../components/widgets/Hero.astro";
+import BasicCTA from "../components/widgets/BasicCTA.astro";
+import BasicFeatures from "../components/widgets/BasicFeatures.astro";
+import StepsFeatures from "../components/widgets/StepsFeatures.astro";
+import BasicFAQs from "../components/widgets/BasicFAQs.astro";
+import TwoColsFeatures from "../components/widgets/TwoColsFeatures.astro";
+import StepsLeft from "../components/widgets/StepsLeft.astro";
+import HighlightedPosts from "../components/widgets/HighlightedPosts.astro";
+import Stats from "../components/widgets/Stats.astro";
+import SearchUI from "../components/widgets/SearchUI.astro";
 
 const title = `${SITE.name} — Your website with Astro + Tailwind CSS`;
 const description =
